Fix spacing for hex info + connected devices button + info wrapper height

--- a/src/components/shared/InfoWrapper.module.css
+++ b/src/components/shared/InfoWrapper.module.css
@@ -1,3 +1,3 @@
 .wrapper {
-  max-height: calc(100vh - 24 * 4px - 12 * 4px - 36px);
+  max-height: calc(100vh - 24 * 4px - 24px);
 }
